force-app/main/default/objects/Agent_Interaction__c/Agent_Interaction__c.object-meta.xml
<CustomObject>
    <label>Agent Interaction</label>
    <pluralLabel>Agent Interactions</pluralLabel>
    <nameField>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>AI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Append-only log of every agent invocation in a customer journey (which agent, what action, products, order, result).</description>
</CustomObject>