force-app/main/default/objects/Agent_Interaction__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Text</type>
    <length>120</length>
    <description>What the agent did (e.g. recommend, add_to_cart, post_purchase_offer, cart_recovery).</description>
</CustomField>