force-app/main/default/objects/Agent_Interaction__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Text</type>
    <length>120</length>
    <description>The agent (orchestrator or specialist) that performed this interaction.</description>
</CustomField>