force-app/main/default/objects/Agent_Interaction__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <label>Customer Journey</label>
    <type>Lookup</type>
    <referenceTo>Customer_Journey__c</referenceTo>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <relationshipName>Agent_Interactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>