force-app/main/default/objects/Agent_Interaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <relationshipName>Agent_Interactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>