force-app/main/default/objects/Agent_Interaction__c/fields/Product_Ids__c.field-meta.xml
<CustomField>
    <fullName>Product_Ids__c</fullName>
    <label>Product Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Comma-separated Product2 ids involved in this interaction.</description>
</CustomField>