force-app/main/default/objects/Agent_Interaction__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Outcome/summary returned by the agent for this interaction.</description>
</CustomField>